third_party/move/move-compiler-v2/tests/checking-lang-v2.4/nest_err.exp

Diagnostics:
error: Invalid operation: pack on `m::Inner` can only be done within module `0xc0ffee::m`
   ┌─ tests/checking-lang-v2.4/nest_err.move:24:9
   │
24 │     fun test() {
   │         ^^^^
25 │         let x = Wrapper(Inner::V1(22, 23));
   │                         ----------------- pack here

error: Invalid operation: pack on `m::Inner2` can only be done within module `0xc0ffee::m` or friend modules
   ┌─ tests/checking-lang-v2.4/nest_err.move:28:9
   │
28 │     fun test2() {
   │         ^^^^^
29 │         let x = Wrapper2(Inner2::V1(22, 23));
   │                          ------------------ pack here
